# fileManager

./: .gitignore  API文档.md  CLAUDE.md  Cargo.toml  README.md  file-manager.code-workspace  prompt.md  产品需求文档.md  技术栈方案.md
.claude/: settings.local.json
doc/: 前端设计文档.md  技术栈变更总结.md  技术规范.md  数据库设计详解.md  项目开发计划.md  项目总结.md  项目文档总览.md
file-manager/: API_INTERFACE.md  Cargo.toml  package.json
file-manager/src/: App.vue
file-manager/src-tauri/: API_DOCUMENTATION.md  Cargo.toml  README.md  tauri.conf.json
file-manager/src-tauri/capabilities/: main.json
file-manager/src-tauri/config/: database.toml  global.toml  runtime.toml
file-manager/src-tauri/migrations/: 0001_initial_schema.sql  0002_add_search_indexes.sql  0003_sqlite_support.sql
file-manager/src-tauri/src/: commands.rs  lib.rs  main.rs
file-manager/src-tauri/src/config/: global.rs  mod.rs
file-manager/src-tauri/src/database/: config.rs  connection.rs  error.rs  mod.rs  tests.rs
file-manager/src-tauri/src/models/: file_system.rs  mod.rs  tag.rs
file-manager/src-tauri/src/services/: file_system.rs  mod.rs  tag.rs
file-manager/src-tauri/src/system/: init.rs  mod.rs  runtime.rs  runtime_config.rs
file-manager/src-tauri/src/utils/: mod.rs  time.rs
file-manager/src/components/: FileItem.vue  FileList.vue  GlobalMessage.vue  IconView.vue  MainContent.vue  ModifyTagDialog.vue  NavigationBar.vue  Toolbar.vue
file-manager/src/composables/: useClipboard.ts  useFileSystem.ts  useNavigation.ts  useSearch.ts
file-manager/src/types/: file.ts  tag.ts
file-manager/src/utils/: constants.ts  formatters.ts  (+2 more)
