[package]
name = "src-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
tauri = "2.9.4"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tempfile = "3.10"