[package]
name = "file-manager"
version = "0.1.0"
edition = "2024"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "file_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
sqlx = { version = "0.8.5", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "migrate", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
thiserror = "1.0"
tempfile = "3.10"

[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }
